cmake_minimum_required(VERSION 3.10)
project(Exam_28_01_2018)

set(CMAKE_CXX_STANDARD 11)

add_executable(Task-1-Unused
        Task-1-Unused.cpp)

add_executable(Task-2-Decompression
        Task-2-Decompression.cpp)

add_executable(Task-3-Entities
        Task-3-Entities.cpp)

add_executable(Task-4-Decryption
        Task-4-Decryption.cpp)
